--- a/config/vcloudair.example
+++ b/config/vcloudair.example
@@ -4,7 +4,7 @@ defaults: &defaults
   password:
   org:
   api_version: 5.6
-  shared-api-key: 'change this key to match X-Api-Shared-Secret in CAT file'
+  api-shared-secret: theapisecret #change this key to match X-Api-Shared-Secret in CAT file
   logging: debug
 
 development:
